localStorage sessionStorage and cookie blog card added

--- a/blogs.html
+++ b/blogs.html
@@ -11,15 +11,18 @@
 
 <body>
     <header>
-        <h1 class="text-center text-success m-5">Welcome To Our <span class="text-warning">Programming Blog Hub</span>
+        <h1 class="container mx-auto text-center text-success bg-primary-subtle py-3 rounded m-5">Welcome To Our
+            <span class="text-danger-emphasis">Programming
+                Blog
+                Hub</span>
         </h1>
     </header>
     <main>
         <article class="container card mb-3">
             <div class="card-body">
-                <h4 class="text-center my-3">JavaScript method
+                <h4 class="text-center my-4">1. JavaScript method
                     <strong>map(), filter(), forEach(), find()</strong>
-                    are the difference between them.
+                    are the difference between them
                 </h4>
                 <div class="">
                     <p>
@@ -44,6 +47,39 @@
                         method. But find() method return only an element which element is fill up this find() condition.
                     </p>
 
+                </div>
+            </div>
+        </article>
+
+        <article class="container card mb-3">
+            <div class="card-body">
+                <h4 class="text-center my-4">2. The difference between
+                    <strong>local storage Vs session storage Vs cookies</strong>
+                </h4>
+
+                <div class="">
+                    <h6 class="text-center fw-bold my-3">localStorage and sessionStorage are almost the same
+                        thing. But the
+                        difference between them is:
+                    </h6>
+                    <p>
+                        <strong>local storage:</strong>
+                        The data in localStorage remains even when the window, tab or
+                        Computer is closed. That is the data remains until the user manually removes the data from their
+                        Browser cache.
+                    </p>
+                    <p>
+                        <strong>sessionStorage:</strong>
+                        On the other hand, the data in the session storage is deleted when the window or tab is closed.
+                        That is ,when the user closes the window, tab or the computer the data is lost.
+                    </p>
+                    <p>
+                        <strong>Cookie:</strong>
+                        are generally used to store small amounts of data and they have an expiration date.On the other
+                        hand, localStorage and sessionStorage are used to store larger amounts of data and difference
+                        data
+                        stored duration.
+                    </p>
                 </div>
             </div>
         </article>
