quizTimer function work description blog added

--- a/blogs.html
+++ b/blogs.html
@@ -140,6 +140,28 @@
                 </div>
             </div>
         </article>
+        <article class="container card mb-3">
+            <div class="card-body">
+                <h4 class="text-center my-4">4.Working description of
+                    <strong>QuizTimer</strong> Function.
+                </h4>
+                <div class="">
+                    <p> <strong>External task:</strong>
+                        The external task of the quiz timer function is to count the time within the UI when the start
+                        quiz button is clicked. Time will continue to count until all six quizzes are selected and the
+                        submit quiz button is clicked.
+                    </p>
+                    <p><strong>Internal task:</strong>
+                        When the start quiz button is clicked the time will start counting in seconds with setInterval
+                        inside the quiz timer function. When the number of seconds becomes greater than 60, it is
+                        converted to minutes. When one minute is over, the timer number in the UI will turn red. And
+                        when six quizzes are selected and the submit quiz button is clicked, the value of the dismiss
+                        parameter will be true and then the time counting will be stopped with clear interval.
+                    </p>
+                </div>
+
+            </div>
+        </article>
     </main>
     <footer>
 
