chooseQuiz function blog added

--- a/blogs.html
+++ b/blogs.html
@@ -162,6 +162,24 @@
 
             </div>
         </article>
+        <article class="container card mb-5">
+            <div class="card-body">
+                <h4 class="text-center my-4">5.Working description of
+                    <strong>chooseQuiz</strong> Function.
+                </h4>
+                <div class="">
+                    <p> <strong>The Internal task of the chooseQuiz function:</strong>
+                        Two parameters are passed to the function. The first parameter will get the index number of each
+                        quiz answer and the second parameter will get the selected text of a quiz. Then the find method
+                        will check whether the answer in our data and the answer selected by the user are identical. If
+                        the answer in the data and the answer given by the user are the same, then the data will be
+                        spliced into an object. And if different then the selected answer will be pushed in the answers
+                        variable and finally set display answer on UI.
+                    </p>
+                </div>
+
+            </div>
+        </article>
     </main>
     <footer>
 
